--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <a target="_blank" href="https://twitter.com/InvsbleFriends" class="nav__link"><i class="fab fa-twitter"></i></a>
                         </li>
                         <li class="nav__link--wrapper">
-                            <a target="_blank" href="#" class="nav__link"><i class="fab fa-instagram"></i></a>
+                            <a target="_blank" href="https://www.instagram.com/invisiblefriends_io/" class="nav__link"><i class="fab fa-instagram"></i></a>
                         </li>
                         <li class="nav__link--wrapper">
                             <a href="#whitelist-info" class="nav__link nav__link--primary">whitelist</a>
@@ -98,13 +98,13 @@
         <h1 class="footer__header">stay invisible my friends</h2>
         <ul class="socials-list">
             <li class="social-list__item">
-                <a href=""><i class="fab fa-github"></i></a>
+                <a target="_blank" href="https://github.com/iamnullcase"><i class="fab fa-github"></i></a>
             </li>
             <li class="social-list__item">
-                <a href="https://twitter.com/developedbyh2o"><i class="fab fa-twitter"></i></a>
+                <a target="_blank" href="https://twitter.com/developedbyh2o"><i class="fab fa-twitter"></i></a>
             </li>
             <li class="social-list__item">
-                <a href="https://www.instagram.com/e.orevillo/"><i class="fab fa-instagram"></i></a>
+                <a target="_blank" href="https://www.instagram.com/e.orevillo/"><i class="fab fa-instagram"></i></a>
             </li>
         </ul>
         <h2 class="footer__header--two">created by H3O#1186</h1>
