--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="landing__text">
                     <h1 class="landing__text--header">Welcome <span class="yellow">Friends!</span></h1>
                     <h2 class="landing__text--header--two">All Characters Are Currently Hidden in the Metaverse.</h2>
-                    <p class="landing__text--para">Although they are hidden here is some useful info on how you can get your hands on a invisble friend.</p>
+                    <p class="landing__text--para">Although they're hidden, here is some useful info on how you can get your hands on a invisble friend.</p>
                 </div>
                 <div class="landing__gif--wrapper">
                     <img class="landing__gif" src="./assets/invisbleCharacters.gif" alt="invisble friends gif">
